--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "grunt",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watch"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,13 @@
     "grunt": "^1.3.0",
     "grunt-add-comment": "^1.1.6",
     "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-uglify": "^5.0.0"
+    "grunt-contrib-uglify": "^5.0.0",
+    "line-reader": "^0.4.0",
+    "parse-diff": "^0.8.1"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.24",
+    "eslint": "^7.30.0",
+    "jest": "^27.0.6"
   }
 }
