--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "grunt-add-comment": "^1.1.6",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-uglify": "^5.0.0",
-    "line-reader": "^0.4.0",
+    "lodash": "^4.17.21",
     "parse-diff": "^0.8.1"
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
+    "@types/node": "^16.3.3",
     "eslint": "^7.30.0",
     "jest": "^27.0.6"
   }
