--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-add-comment": "^1.1.6",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-uglify": "^5.0.0",
+    "jest-file-snapshot": "^0.5.0",
     "lodash": "^4.17.21",
     "parse-diff": "^0.8.1"
   },
