--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "grunt-test",
+  "name": "patcher",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "grunt",
     "test": "jest --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "grunt": "^1.3.0",
-    "grunt-add-comment": "^1.1.6",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-uglify": "^5.0.0",
     "jest-file-snapshot": "^0.5.0",
     "lodash": "^4.17.21",
     "parse-diff": "^0.8.1"
